re-enable button & reply message
